[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flowsim"
authors = [
  { name="Steen Christensen", email="sc@geo.au.dk" },
]
description = "A Python package to simulate flow response to transient boundary conditions"
readme = "README.md"
license = { file="LICENSE" }
keywords = ["Hydraulic head", "Recharge", "Discharge", "Transient", "Hydrological modeling", "Carslaw and Jaeger"]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8.8"
dependencies = [
    "numpy >=1.20.1",
    "matplotlib >= 3.3.4",
    "pandas >=1.2.4",
    "pyyaml >=5.4.1",
]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/SteenChr/flowsim"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "flowsim.version.__version__"}

[tool.setuptools.packages.find]
include = ["flowsim","flowsim.cj_response_funcs"]

[tool.setuptools.package-data]
"flowsim" = ["Example/*.*"]
